fixed gap between service items

--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,8 @@ body {
     margin-top: 30px;
 
     @media screen and (max-width: 700px) {
-        display: block;
+        /* Changed display: block; to flex-direction: column; after practical class as keeping display flex keeps a gap between items (display: block removes it) */
+        flex-direction: column;
     }
 }
 
